--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "compile": "npx hardhat compile",
+  "test": "npx hardhat test",
+  "deploy": "npx hardhat run scripts/deploy.js --network localhost",
+  "full": "npm run compile && npm run test && npm run deploy"
   },
   "repository": {
     "type": "git",
